--- a/.htaccess
+++ b/.htaccess
@@ -34,6 +34,23 @@
     RewriteRule ^productos/alta\/                        /index.php?seccion=productos&oper=create [L]
     RewriteRule ^productos/(.*)\/                        /index.php?seccion=productos [L]
 
+    RewriteRule ^ciclos\/$                            /index.php?seccion=ciclos [L]
+    RewriteRule ^ciclos/actualizar/([0-9]+)$          /index.php?seccion=ciclos&oper=update&id=$1 [L]
+    RewriteRule ^ciclos/eliminar/([0-9]+)$            /index.php?seccion=ciclos&oper=delete&id=$1 [L]
+    RewriteRule ^ciclos/alta\/                        /index.php?seccion=ciclos&oper=create [L]
+    RewriteRule ^ciclos/(.*)\/                        /index.php?seccion=ciclos [L]
+
+
+
+    RewriteRule ^aulas\/$                            /index.php?seccion=aulas [L]
+    RewriteRule ^aulas/actualizar/([0-9]+)$          /index.php?seccion=aulas&oper=update&id=$1 [L]
+     RewriteRule ^aulas/leer/([0-9]+)$               /index.php?seccion=aulas&oper=read&id=$1 [L]
+    RewriteRule ^aulas/actualizar/([0-9]+)$          /index.php?seccion=aulas&oper=update&id=$1&accion=$2 [L]
+    RewriteRule ^aulas/eliminar/([0-9]+)$            /index.php?seccion=aulas&oper=delete&id=$1 [L]
+    RewriteRule ^aulas/alta\/                        /index.php?seccion=aulas&oper=create [L]
+    RewriteRule ^aulas/(.*)\/                        /index.php?seccion=aulas [L]
+
+
 
     # Redirigir la URL de tipo /datos/otros/numero a /index.php?seccion=datos&oper=otros&id=numero
     #RewriteRule ^seccion/([^/]+)/([^/]+)/([^/]+)$ /index.php?seccion=$1&oper=$2&id=$3 [L,QSA]
